--- a/deno.json
+++ b/deno.json
@@ -8,8 +8,10 @@
     "report": "deno coverage report --lcov --output=./coverage/lcov.info"
   },
   "imports": {
+    "@scalar/hono-api-reference": "npm:@scalar/hono-api-reference@^0.5.162",
     "@skance/": "./src/",
     "@hono/hono": "jsr:@hono/hono@^4.6.10",
+    "@hono/zod-openapi": "npm:@hono/zod-openapi@^0.18.3",
     "@std/assert": "jsr:@std/assert@^1.0.7",
     "@std/dotenv": "jsr:@std/dotenv@^0.225.2",
     "@std/fmt": "jsr:@std/fmt@^1.0.3",
